# mkbook

./: .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  README.md  index.html  mkbook.html  pyproject.toml  search.js  setup.cfg
.github/workflows/: release.yml
mkbook/: __init__.py  main.py  mkbook.py
tests/: test_afxdl.py
