[metadata]
name = mkbook
version = attr: mkbook.__version__
description = Make directory including pictures into a PDF book
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/eggplants/mkbook
author = eggplants
author_email = w10776e8w@yahoo.co.jp
license = MIT
license_file = LICENSE
classifiers =
    Development Status :: 3 - Alpha
    License :: OSI Approved :: MIT License
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10

[options]
packages = find:
python_requires = >=3.7
install_requires =
    reportlab
    Pillow
    types-Pillow
packages_data =
    mkbook = py.typed

[options.entry_points]
console_scripts =
    mkbook = mkbook.main:main

[options.extras_require]
all =
    %(dev)s
    %(types)s
dev =
    black
    flake8
    isort
    mypy
    pre-commit
    setuptools>=46.4.0
types =
    types-setuptools

[isort]
profile = black

[flake8]
indent-size = 4
max-line-length = 120

[mypy]
python_version = 3.9
show_error_codes = True
pretty = True
strict = True
